# Simple_Research_Agent

./: .env  .gitignore  PROJECT_REPORT.md  README.md  app.py  main.py  pyproject.toml  requirements.txt
.streamlit/: config.toml
reports/: research_report_AI_for_Business_studies_20250618_101300.md  research_report_AI_for_education_20250618_095958.md  research_report_Ai_for_education_20250618_110218.md  research_report_Ai_for_education_20250618_110403.md  research_report_Analyze_five_recent_articles_or_studies_on_the_eth_20250617_220414.md  research_report_Ethical_implications_of_deploying_large_language_m_20250617_220315.md  research_report_Summarize_five_recent_studies_on_how_climate_chang_20250617_220040.md
utils/: __init__.py  agent.py  gemini_agent.py  helpers.py  serper_api.py
